# graphics-1

./: .gitignore  CMakeLists.txt  README.md
part-a/: CMakeLists.txt  simple.cpp
part-b/: CMakeLists.txt  example1.cpp
part-c/: CMakeLists.txt  simple.cpp
